<resources>
    <string name="app_name">Saathi</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Phone Number</string>
    <string name="country_code">+91</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="continue_save">Continue</string>
    <string name="save_changes">Save Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_internet">No internet !</string>
    <string name="no_internet_message">You are offline! Please connect to cellular or WiFi network.</string>
    <string name="date_time_template">dd/MM/yyyy, HH:mm</string>
</resources>
