<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linear_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/constraintLayoutOne"
                android:background="?attr/colorPrimary">

            <TextView
                    android:text="@string/country_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textCountryCode"
                    android:background="@drawable/bg_solid_accent"
                    android:drawablePadding="10dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:drawableLeft="@drawable/flag_india"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textDescription"/>

            <TextView
                    android:text="@string/welcome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textWelcome"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:textSize="30sp"
                    style="@style/FontRaleway"
                    android:textStyle="bold"
                    android:textColor="?attr/textPrimaryColor"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:textColor="?attr/textSecondaryColor"
                    android:text="@string/enter_your_mobile_number"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/textWelcome"/>

            <Button
                    android:text="@string/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/selector_button_accent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintBottom_toTopOf="@+id/divider"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/buttonLogin"/>

            <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:text="I agree with term &amp; conditions"
                    android:textColor="?attr/textPrimaryColor"
                    android:buttonTint="?attr/tintCheckBox"
                    app:layout_constraintTop_toBottomOf="@+id/textCountryCode"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:indeterminate="true"
                    android:visibility="invisible"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="32dp"
                    android:padding="@dimen/spacing_middle"
                    android:id="@+id/buttonGoogleSignin"
                    android:clickable="true">

                <TextView
                        android:text="Google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="?attr/textPrimaryColor"
                        android:drawableLeft="@drawable/googleg_standard_color_18"
                        android:drawablePadding="15dp"
                        android:layout_marginStart="10dp"
                        android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                    android:text="Choose an account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonGoogleSignin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                    android:textColor="?attr/textPrimaryColor"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:text="or connect with social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/color_accent_light"
                    android:textSize="18sp"/>

            <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintBottom_toTopOf="@+id/viewShadow"/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:id="@+id/viewShadow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/bg_shadow_soft"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView6"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="0dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_width="0dp"
                    android:textColorHint="?attr/textSecondaryColor"
                    app:layout_constraintStart_toEndOf="@+id/textCountryCode"
                    android:id="@+id/textInputLayout"
                    app:layout_constraintBottom_toBottomOf="@+id/textCountryCode"
                    app:layout_constraintTop_toTopOf="@+id/textCountryCode"
                    android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textPrimaryColor"
                        android:textColorHint="?attr/textSecondaryColor"
                        android:maxLength="10"
                        android:hint="@string/mobile_number"
                        android:id="@+id/editTextMobNumber"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>